--- a/.github/workflows/_gaudi_hpu_ut.yml
+++ b/.github/workflows/_gaudi_hpu_ut.yml
@@ -38,6 +38,10 @@ on:
           type: string
           default: '3.10'
           description: 'The python version to use'
+      rel_ver:
+        required: true
+        type: string
+        description: 'The release version of torch_hpu to use'
 
 # Bash shells do not use ~/.profile or ~/.bashrc so these shells need to be explicitly
 # declared as "shell: bash -el {0}" on steps that need to be properly activated.
@@ -100,7 +104,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: HabanaAI/gaudi-pytorch-bridge
-          ref: v1.20.0
+          ref: v${{ inputs.rel_ver }}
           path: torch_hpu
 
       - name: Install pip dependencies
