[GAUDI] Disable Gaudi CI. (#23)
The GAUD CI pipeline has been temporarily disabled because the required
Gaudi 3 cards are not available on Intel Cloud. This change will be
reverted once the necessary hardware becomes accessible.

--- a/.github/workflows/gaudi_hpu_test.yml
+++ b/.github/workflows/gaudi_hpu_test.yml
@@ -69,6 +69,11 @@ on:
           - 8
         default: '0'
         description: 'The device selected to run on'
+      skip_run:
+        required: true
+        type: boolean
+        default: true
+        description: 'Skip the run of the workflow'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
@@ -77,6 +82,7 @@ concurrency:
 jobs:
   prepare:
     name: Prepare
+    if: ${{ github.event.inputs.skip_run == 'false' }}
     runs-on: ubuntu-latest
     env:
       REL_VERSION: "1.21.0"
@@ -113,6 +119,7 @@ jobs:
     name: Build torch
     needs:
       - prepare
+    if: ${{ github.event.inputs.skip_run == 'false' }}
     # if: ${{ needs.prepare.outputs.ref }}
     uses: ./.github/workflows/_build_torch.yml
     with:
@@ -126,7 +133,7 @@ jobs:
     needs:
       - prepare
       - build-torch
-    if: ${{ !cancelled() && (success() || needs.build-torch.result == 'skipped') }}
+    if: ${{ !cancelled() && (success() || needs.build-torch.result == 'skipped') && github.event.inputs.skip_run == 'false' }}
     uses: ./.github/workflows/_gaudi_hpu_build_torch_hpu.yml
     with:
       runner: ${{ needs.prepare.outputs.runner }}
@@ -143,7 +150,8 @@ jobs:
       - build
     if: |
       !cancelled() && github.event_name != 'repository_dispatch' &&
-      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
+      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success')) &&
+      github.event.inputs.skip_run == 'false'
     uses: ./.github/workflows/_gaudi_hpu_ut.yml
     with:
       ref: ${{ needs.prepare.outputs.ref }}
@@ -164,7 +172,8 @@ jobs:
       - test
     if: |
       !cancelled() && github.event_name != 'repository_dispatch' &&
-      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
+      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success')) &&
+      github.event.inputs.skip_run == 'false'
     uses: ./.github/workflows/_gaudi_hpu_benchmark.yml
     with:
       ref: ${{ needs.prepare.outputs.ref }}
