--- a/.github/workflows/ascend_npu_test.yml
+++ b/.github/workflows/ascend_npu_test.yml
@@ -150,3 +150,21 @@ jobs:
   #     torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
   #   secrets:
   #     pr-token: ${{ secrets.ASCEND_RUNNER_TOKEN }}
+
+  torchtune:
+    name: Run benchmarks
+    needs:
+      - prepare
+      - build-torch
+      - build
+    if: |
+      !cancelled() && github.event_name != 'repository_dispatch' &&
+      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
+    uses: ./.github/workflows/_ascend_npu_torchtune.yml
+    with:
+      runner: ${{ needs.prepare.outputs.runner }}
+      image: ${{ needs.prepare.outputs.image }}
+      torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
+      torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
+    secrets:
+      hf-token: ${{ secrets.HF_TOKEN }}
