--- a/.github/workflows/ascend_npu_test.yml
+++ b/.github/workflows/ascend_npu_test.yml
@@ -116,8 +116,6 @@ jobs:
       runner: ${{ needs.prepare.outputs.runner }}
       image: ${{ needs.prepare.outputs.image }}
       torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
-    secrets:
-      runner-token: ${{ secrets.ASCEND_RUNNER_TOKEN }}
 
   test:
     name: Test torch_npu
@@ -135,20 +133,20 @@ jobs:
       torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
       torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
 
-  benchmark:
-    name: Run benchmarks
-    needs:
-      - prepare
-      - build-torch
-      - build
-    if: |
-      !cancelled() && github.event_name != 'repository_dispatch' &&
-      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
-    uses: ./.github/workflows/_ascend_npu_benchmark.yml
-    with:
-      runner: ${{ needs.prepare.outputs.runner }}
-      image: ${{ needs.prepare.outputs.image }}
-      torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
-      torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
-    secrets:
-      pr-token: ${{ secrets.ASCEND_RUNNER_TOKEN }}
+  # benchmark:
+  #   name: Run benchmarks
+  #   needs:
+  #     - prepare
+  #     - build-torch
+  #     - build
+  #   if: |
+  #     !cancelled() && github.event_name != 'repository_dispatch' &&
+  #     (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
+  #   uses: ./.github/workflows/_ascend_npu_benchmark.yml
+  #   with:
+  #     runner: ${{ needs.prepare.outputs.runner }}
+  #     image: ${{ needs.prepare.outputs.image }}
+  #     torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
+  #     torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
+  #   secrets:
+  #     pr-token: ${{ secrets.ASCEND_RUNNER_TOKEN }}
