--- a/.github/workflows/_ascend_npu_benchmark.yml
+++ b/.github/workflows/_ascend_npu_benchmark.yml
@@ -90,13 +90,6 @@ jobs:
         run: |
           pip install -r https://raw.githubusercontent.com/Ascend/pytorch/refs/heads/master/requirements.txt
 
-      - name: List torch version
-        id: list-torch-version
-        shell: bash
-        run: |
-          torch_version=$(python -c "import torch; print(torch.__version__)")
-          echo "torch-version=${torch_version}" >> $GITHUB_OUTPUT
-
       - name: Download torch_npu artifact
         uses: actions/download-artifact@v4
         with:
@@ -107,6 +100,13 @@ jobs:
         working-directory: ascend_npu
         run: |
           pip install ${{ inputs.torch-npu-artifact }}
+
+      - name: List torch version
+        id: list-torch-version
+        shell: bash
+        run: |
+          torch_version=$(python -c "from importlib.metadata import version;print(version('torch'))")
+          echo "torch-version=${torch_version}" >> $GITHUB_OUTPUT
 
       - name: Install benchmark dependencies
         run: |
